added support for maid and fixed minnor issue

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
           <option>UR</option>
           <option>SSR</option>
           <option>SR</option>
-          <option>Rare</option>
-          <option>Common</option>
+          <option>R</option>
+          <option>C</option>
         </select>
         <input type="text" id="name" placeholder="Card Name" class="border p-2 rounded" required />
         <input type="text" id="version" placeholder="Version (e.g. V7)" class="border p-2 rounded" required />
@@ -27,6 +27,7 @@
           <option value="">Select Event</option>
           <option>Halloween</option>
           <option>Christmas</option>
+          <option>Maid</option>
         </select>
         <input type="url" id="link" placeholder="Discord Link" class="border p-2 rounded" required />
         <button type="submit" class="bg-blue-600 text-white p-2 rounded col-span-2">Add Card</button>
