change maid emote

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <option value="">Select Event</option>
           <option>Halloween🎃</option>
           <option>Christmas🎄</option>
-          <option>Maid👗</option>
+          <option>Maid🎀</option>
         </select>
         <input type="url" id="link" placeholder="Discord Link" class="border p-2 rounded dark:bg-gray-700 dark:border-gray-600 dark:text-white focus:ring-2 focus:ring-blue-500 focus:outline-none" required />
         <button type="submit" class="bg-blue-600 text-white p-2 rounded col-span-2 transition-transform transform hover:scale-105 ">
