--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     <div class="bg-white dark:bg-gray-800 p-4 rounded-lg shadow-md mb-6 transition-all">
       <form id="cardForm" class="grid gap-4 sm:grid-cols-2">
-        <select id="rarity" class="border p-2 rounded dark:bg-gray-700 dark:border-gray-600 dark:text-white focus:ring-2 focus:ring-blue-500 focus:outline-none" required>
+        <select id="rarity" class="border p-2 rounded dark:bg-gray-700 dark:border-gray-600 dark:text-white" required>
           <option value="">Select Rarity</option>
           <option>UR</option>
           <option>SSR</option>
@@ -21,24 +21,30 @@
           <option>R</option>
           <option>C</option>
         </select>
-        <input type="text" id="name" placeholder="Card Name" class="border p-2 rounded dark:bg-gray-700 dark:border-gray-600 dark:text-white focus:ring-2 focus:ring-blue-500 focus:outline-none" required />
-        <input type="text" id="version" placeholder="Version (e.g. V7)" class="border p-2 rounded dark:bg-gray-700 dark:border-gray-600 dark:text-white focus:ring-2 focus:ring-blue-500 focus:outline-none" required />
-        <select id="event" class="border p-2 rounded dark:bg-gray-700 dark:border-gray-600 dark:text-white focus:ring-2 focus:ring-blue-500 focus:outline-none">
+        <input type="text" id="name" placeholder="Card Name" class="border p-2 rounded dark:bg-gray-700 dark:border-gray-600 dark:text-white" required />
+        <input type="text" id="version" placeholder="Version (e.g. V7)" class="border p-2 rounded dark:bg-gray-700 dark:border-gray-600 dark:text-white" required />
+        <select id="event" class="border p-2 rounded dark:bg-gray-700 dark:border-gray-600 dark:text-white">
           <option value="">Select Event</option>
           <option>Halloween🎃</option>
           <option>Christmas🎄</option>
           <option>Maid🎀</option>
         </select>
-        <input type="url" id="link" placeholder="Discord Link" class="border p-2 rounded dark:bg-gray-700 dark:border-gray-600 dark:text-white focus:ring-2 focus:ring-blue-500 focus:outline-none" required />
-        <button type="submit" class="bg-blue-600 text-white p-2 rounded col-span-2 transition-transform transform hover:scale-105 ">
+        <input type="url" id="link" placeholder="Discord Link" class="border p-2 rounded dark:bg-gray-700 dark:border-gray-600 dark:text-white" required />
+        <button type="submit" class="bg-blue-600 text-white p-2 rounded col-span-2 transition-transform transform hover:scale-105">
           Add Card
         </button>
       </form>
     </div>
 
     <div class="bg-white dark:bg-gray-800 p-4 rounded-lg shadow-md mb-6 transition-all">
+      <label for="mode" class="block mb-1 font-semibold">Output Mode</label>
+      <select id="mode" class="border p-2 rounded mb-4 dark:bg-gray-700 dark:border-gray-600 dark:text-white">
+        <option value="markdown">Standard Markdown</option>
+        <option value="embed">Embed Style (Emo Headers)</option>
+      </select>
+
       <h2 class="text-xl font-semibold mb-2">Auction Text</h2>
-      <textarea id="output" class="w-full h-64 p-2 border rounded mb-4 bg-gray-50 text-gray-900 dark:bg-gray-700 dark:border-gray-600 dark:text-white transition-all"></textarea>
+      <textarea id="output" class="w-full h-64 p-2 border rounded mb-4 bg-gray-50 text-gray-900 dark:bg-gray-700 dark:border-gray-600 dark:text-white"></textarea>
       <div class="flex gap-2">
         <button id="copyBtn" class="bg-green-600 text-white p-2 rounded transition-transform transform hover:scale-105">
           Copy to Clipboard
