--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
           <option>Halloween🎃</option>
           <option>Christmas🎄</option>
           <option>Maid🎀</option>
+          <option>Summer🏖️</option>
         </select>
         <input id="link" type="url" placeholder="Discord Link" required class="border p-2 rounded-lg bg-white/60 dark:bg-gray-700 dark:border-gray-600 dark:text-white" />
         <button type="submit" class="col-span-full bg-blue-600 text-white p-2 rounded-lg hover:scale-[1.02] active:scale-95 transition-transform">
