--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <form id="cardForm" autocomplete="off" class="grid grid-cols-1 md:grid-cols-2 gap-4">
         <select id="rarity" required class="border p-2 rounded-lg bg-white/60 dark:bg-gray-700 dark:border-gray-600 dark:text-white">
           <option value="">Select Rarity</option>
+          <option>CM</option>
           <option>UR</option>
           <option>SSR</option>
           <option>SR</option>
@@ -87,31 +88,28 @@
     </section>
   </div>
 
- <!-- DARK MODE TOGGLE -->
-<button id="themeToggle" class="fixed top-4 right-4 bg-gray-900 text-white px-4 py-2 rounded-full shadow-lg hover:scale-110 transition-all z-50">
-  🌙 Dark
-</button>
+  <!-- DARK MODE TOGGLE -->
+  <button id="themeToggle" class="fixed top-4 right-4 bg-gray-900 text-white px-4 py-2 rounded-full shadow-lg hover:scale-110 transition-all z-50">
+    🌙 Dark
+  </button>
 
-<script>
-  const toggleBtn = document.getElementById("themeToggle");
+  <script>
+    const toggleBtn = document.getElementById("themeToggle");
+    const savedTheme = localStorage.getItem("theme");
+    if (savedTheme === "dark") {
+      document.documentElement.classList.add("dark");
+      toggleBtn.textContent = "🌞 Light";
+    } else {
+      document.documentElement.classList.remove("dark");
+      toggleBtn.textContent = "🌙 Dark";
+    }
 
-  // Apply saved theme on load
-  const savedTheme = localStorage.getItem("theme");
-  if (savedTheme === "dark") {
-    document.documentElement.classList.add("dark");
-    toggleBtn.textContent = "🌞 Light";
-  } else {
-    document.documentElement.classList.remove("dark");
-    toggleBtn.textContent = "🌙 Dark";
-  }
-
-  // Toggle logic
-  toggleBtn.addEventListener("click", () => {
-    const isDark = document.documentElement.classList.toggle("dark");
-    toggleBtn.textContent = isDark ? "🌞 Light" : "🌙 Dark";
-    localStorage.setItem("theme", isDark ? "dark" : "light");
-  });
-</script>
+    toggleBtn.addEventListener("click", () => {
+      const isDark = document.documentElement.classList.toggle("dark");
+      toggleBtn.textContent = isDark ? "🌞 Light" : "🌙 Dark";
+      localStorage.setItem("theme", isDark ? "dark" : "light");
+    });
+  </script>
   <script src="script.js"></script>
 </body>
 </html>
