--- a/index.html
+++ b/index.html
@@ -32,9 +32,92 @@
 
     <!-- FORM CARD -->
     <section class="backdrop-blur-md bg-white/30 dark:bg-gray-800/30 border border-white/10 rounded-2xl shadow-lg p-6 mb-8 transition-all duration-300">
+      <!-- Success Message -->
+      <div id="successMessage" class="hidden bg-green-100 dark:bg-green-900/30 border border-green-400 text-green-700 dark:text-green-300 px-4 py-3 rounded-lg mb-4 transition-all duration-300">
+        <span class="font-medium">✓ Card added successfully!</span>
+      </div>
+
       <form id="cardForm" autocomplete="off" class="grid grid-cols-1 md:grid-cols-2 gap-4">
-        <select id="rarity" required class="border p-2 rounded-lg bg-white/60 dark:bg-gray-700 dark:border-gray-600 dark:text-white">
+        <div class="relative">
+          <select id="rarity" required class="border p-2 rounded-lg bg-white/60 dark:bg-gray-700 dark:border-gray-600 dark:text-white w-full transition-colors duration-200">
+            <option value="">Select Rarity</option>
+            <option>CM</option>
+            <option>UR</option>
+            <option>SSR</option>
+            <option>SR</option>
+            <option>R</option>
+            <option>C</option>
+          </select>
+          <div class="error-message hidden text-red-500 text-sm mt-1">Please select a rarity</div>
+        </div>
+        <div class="relative">
+          <input id="name" type="text" placeholder="Card Name" required class="border p-2 rounded-lg bg-white/60 dark:bg-gray-700 dark:border-gray-600 dark:text-white w-full transition-colors duration-200" />
+          <div class="error-message hidden text-red-500 text-sm mt-1">Card name is required</div>
+        </div>
+        <div class="relative">
+          <input id="version" type="text" placeholder="Version (e.g. V7)" required class="border p-2 rounded-lg bg-white/60 dark:bg-gray-700 dark:border-gray-600 dark:text-white w-full transition-colors duration-200" />
+          <div class="error-message hidden text-red-500 text-sm mt-1">Version is required</div>
+        </div>
+        <select id="event" class="border p-2 rounded-lg bg-white/60 dark:bg-gray-700 dark:border-gray-600 dark:text-white w-full transition-colors duration-200">
           <option value="">Select Rarity</option>
+          <option value="">Select Event</option>
+          <option>Halloween🎃</option>
+          <option>Christmas🎄</option>
+          <option>Maid🎀</option>
+          <option>Summer🏖️</option>
+        </select>
+        <div class="relative">
+          <input id="link" type="url" placeholder="Discord Link" required class="border p-2 rounded-lg bg-white/60 dark:bg-gray-700 dark:border-gray-600 dark:text-white w-full transition-colors duration-200" />
+          <div class="error-message hidden text-red-500 text-sm mt-1">Valid Discord link is required</div>
+        </div>
+        <button type="submit" class="col-span-full bg-blue-600 text-white p-2 rounded-lg hover:scale-[1.02] active:scale-95 transition-transform disabled:opacity-50 disabled:cursor-not-allowed">
+          Add Card
+        </button>
+      </form>
+    </section>
+
+    <!-- CARD MANAGEMENT -->
+    <section id="cardManagement" class="backdrop-blur-md bg-white/30 dark:bg-gray-800/30 border border-white/10 rounded-2xl shadow-lg p-6 mb-8 transition-all duration-300 hidden">
+      <div class="flex justify-between items-center mb-4">
+        <h2 class="text-xl font-semibold">Added Cards</h2>
+        <div class="flex gap-2">
+          <button id="exportBtn" class="bg-purple-600 text-white px-3 py-1 rounded-lg text-sm hover:scale-105 transition-transform">
+            Export JSON
+          </button>
+          <button id="importBtn" class="bg-indigo-600 text-white px-3 py-1 rounded-lg text-sm hover:scale-105 transition-transform">
+            Import JSON
+          </button>
+          <input type="file" id="importFile" accept=".json" class="hidden">
+        </div>
+      </div>
+      
+      <!-- Rarity Counters -->
+      <div class="grid grid-cols-3 md:grid-cols-6 gap-2 mb-4">
+        <div class="bg-gradient-to-r from-yellow-400 to-yellow-600 text-white px-2 py-1 rounded text-center text-sm font-semibold">
+          CM: <span id="count-CM">0</span>
+        </div>
+        <div class="bg-gradient-to-r from-purple-500 to-purple-700 text-white px-2 py-1 rounded text-center text-sm font-semibold">
+          UR: <span id="count-UR">0</span>
+        </div>
+        <div class="bg-gradient-to-r from-red-500 to-red-700 text-white px-2 py-1 rounded text-center text-sm font-semibold">
+          SSR: <span id="count-SSR">0</span>
+        </div>
+        <div class="bg-gradient-to-r from-blue-500 to-blue-700 text-white px-2 py-1 rounded text-center text-sm font-semibold">
+          SR: <span id="count-SR">0</span>
+        </div>
+        <div class="bg-gradient-to-r from-green-500 to-green-700 text-white px-2 py-1 rounded text-center text-sm font-semibold">
+          R: <span id="count-R">0</span>
+        </div>
+        <div class="bg-gradient-to-r from-gray-500 to-gray-700 text-white px-2 py-1 rounded text-center text-sm font-semibold">
+          C: <span id="count-C">0</span>
+        </div>
+      </div>
+
+      <!-- Search and Filter -->
+      <div class="flex gap-2 mb-4">
+        <input id="searchCards" type="text" placeholder="Search cards..." class="flex-1 border p-2 rounded-lg bg-white/60 dark:bg-gray-700 dark:border-gray-600 dark:text-white">
+        <select id="filterRarity" class="border p-2 rounded-lg bg-white/60 dark:bg-gray-700 dark:border-gray-600 dark:text-white">
+          <option value="">All Rarities</option>
           <option>CM</option>
           <option>UR</option>
           <option>SSR</option>
@@ -42,20 +125,12 @@
           <option>R</option>
           <option>C</option>
         </select>
-        <input id="name" type="text" placeholder="Card Name" required class="border p-2 rounded-lg bg-white/60 dark:bg-gray-700 dark:border-gray-600 dark:text-white" />
-        <input id="version" type="text" placeholder="Version (e.g. V7)" required class="border p-2 rounded-lg bg-white/60 dark:bg-gray-700 dark:border-gray-600 dark:text-white" />
-        <select id="event" class="border p-2 rounded-lg bg-white/60 dark:bg-gray-700 dark:border-gray-600 dark:text-white">
-          <option value="">Select Event</option>
-          <option>Halloween🎃</option>
-          <option>Christmas🎄</option>
-          <option>Maid🎀</option>
-          <option>Summer🏖️</option>
-        </select>
-        <input id="link" type="url" placeholder="Discord Link" required class="border p-2 rounded-lg bg-white/60 dark:bg-gray-700 dark:border-gray-600 dark:text-white" />
-        <button type="submit" class="col-span-full bg-blue-600 text-white p-2 rounded-lg hover:scale-[1.02] active:scale-95 transition-transform">
-          Add Card
-        </button>
-      </form>
+      </div>
+
+      <!-- Cards List -->
+      <div id="cardsList" class="space-y-2 max-h-64 overflow-y-auto">
+        <!-- Cards will be dynamically added here -->
+      </div>
     </section>
 
     <!-- MODE & OUTPUT -->
@@ -75,6 +150,9 @@
         </button>
         <button id="clearBtn" class="bg-red-500 text-white px-4 py-2 rounded-lg hover:scale-105 active:scale-95 transition-transform">
           Clear All
+        </button>
+        <button id="undoBtn" class="bg-gray-600 text-white px-4 py-2 rounded-lg hover:scale-105 active:scale-95 transition-transform disabled:opacity-50 disabled:cursor-not-allowed" disabled>
+          Undo
         </button>
       </div>
     </section>
